refactor: code review improvements for production readiness
- Fix CRITICAL: consolidate SSL + credentials into single HttpClientConfigCallback (prevented silent credential drop when ssl-enabled=true)
- Fix CRITICAL: remove customer-specific Mustache templates from generic library
- Fix MEDIUM: replace Apache Commons Logging with SLF4J in EsIndexManager and EsTemplateInitializer; use parameterised log calls
- Fix MEDIUM: replace bare RuntimeException with typed EsOperationException / EsTemplateException in EsIndexManager, MappingFileIndexTemplate, QueryBuilder
- Fix MEDIUM: add @ToString.Exclude on password and truststorePassword fields in EsProperties to prevent secret leakage in logs
- Fix MEDIUM: remove static coupling to EsTemplateInitializer from EsOperationsImpl; inline trivial toEsId logic
- Fix HIGH: remove @Component from TemplateRegistry (library class should not force consumer component scan)
- Fix LOW: replace fragile string-based FieldValue kind check in SearchResult with enum-based switch
- docs: full professional README rewrite